Fix wrapping, double the size
I fixed the wrapping and now my grid works.
I doubled the size so the etch-a-sketch would be more visible on browser.
Will work on the hover effect next.

--- a/style.css
+++ b/style.css
@@ -2,15 +2,15 @@
     display: flex;
     flex-wrap: wrap;
     border: 2px solid black;
-    width: 400px;
-    height: 400px;
+    width: 800px;
+    height: 800px;
     margin: 20px auto;
     box-sizing: border-box;
 }
 
 .square {
-    width: 25px; /*because 400px/16 = 25px per quare */
-    height: 25px;
+    width: 49.75px; /*because 800px/16 = 50px per quare, however it was wrapping wrong */
+    height: 49.75px;
     border: 1px solid black;
     box-sizing: border-box;
     background-color: lightgray;
